<resources>
    <string name="app_name">众评保险</string>
    <string name="welcome_word">欢迎来到众评保险</string>

    <!-- launcher UI  -->
    <string name="launcher_label">Launcher</string>
    <string name="search_hint">搜索想要的保险</string>
    <string name="menu_compare_text">保险对比</string>
    <string name="menu_evaluate_text">保险评价</string>
    <string name="menu_consult_text">保险咨询</string>
    <string name="menu_learn_text">保险课堂</string>

    <string name="recommend_insurance_title">今日推荐</string>

    <string name="score">评分</string>
    <string name="score_formatter" formatted="false">评分：%s分</string>

    <string name="like">赞</string>

    <string name="comment">评论</string>
    <string name="hot_comment_block">热门评论</string>
    <string name="insurance_type_block">保险种类</string>
    <string name="insurance_company_block">保险公司</string>
    <string name="medical_insurance">医疗保险</string>
    <string name="personal_accident_insurance">个人意外</string>
    <string name="financing_insurance">理财保险</string>

    <string name="tab_home">首 页</string>
    <string name="tab_discover">发 现</string>
    <string name="tab_add">评论</string>
    <string name="tab_my">我</string>
    <string name="tab_message">消息</string>

    <string name="add_comment_title">发表评论</string>
    <string name="comment_info" formatted="false">浏览%d&#160;赞%d</string>
    <string name="comment_total">总体</string>
    <string name="comment_sub_1">公司信誉</string>
    <string name="comment_sub_2">代理人服务</string>
    <string name="comment_sub_3">理赔速度</string>
    <string name="comment_sub_4">收益回报</string>
    <string name="comment_view_info">浏览%d</string>
    <string name="comment_up_info">赞%d</string>
    <string name="comment_reply_info">评论%d</string>
    <string name="comment_star_info">%d星</string>
    <string name="comment_hint">亲对我们的服务有什么意见？请尽管说~</string>
    <string name="comment_post">发表</string>
    <string name="comment_detail_title">评论详情</string>

    <string name="login_username_tip">用户名/手机号</string>
    <string name="login_password_tip">请填写密码</string>
    <string name="login_username">账号</string>
    <string name="login_password">密码</string>
    <string name="login_register">注册新账户</string>
    <string name="login">登陆</string>
    <string name="logout">注销</string>

    <string name="login_request">点击登陆</string>
    <string name="loading">正在加载</string>

    <string name="confirm">确定</string>
    <string name="cancel">取消</string>

    <string name="company_list_title">公司列表</string>
    <string name="company_select">选择保险公司</string>

    <string name="insurance_type_list_title">保险种类列表</string>
    <string name="insurance_type_select">选择保险种类</string>

    <string name="comment_error_not_content">请输入评论内容</string>
    <string name="comment_error_content_length_too_short">评论内容太短，需要大于15个字</string>
    <string name="comment_error_not_select_company">评论未选择对应的保险公司</string>
    <string name="comment_error_not_select_insurance_type">评论未选择对应的保险种类</string>

    <string name="comment_reply_uin_prefix">回复%s：</string>

    <string name="comment_sub_1_colons">公司信誉：</string>
    <string name="comment_sub_2_colons">代理人服务：</string>
    <string name="comment_sub_3_colons">理赔速度：</string>
    <string name="comment_sub_4_colons">收益回报：</string>

    <string name="comment_score_desc_1">非常好</string>
    <string name="comment_score_desc_2">很好</string>
    <string name="comment_score_desc_3">一般</string>
    <string name="comment_score_desc_4">很差</string>

    <string name="comment_company">评价公司：</string>
    <string name="comment_insurance_type">保险种类：</string>

    <string name="annal_compensation_desc">每年赔偿上限： %d万</string>

    <string name="insurance_detail">保险详情</string>
    <string name="annal_compensation">每年赔偿上限：%d万</string>
    <string name="annal_premium">每年平均保费：%d</string>
    <string name="insurance_age_range" formatted="false">年龄范围：%d岁-%d岁</string>

    <string name="insurance_compare">保险对比</string>
    <string name="compare">对比</string>
    <string name="init_compare_insurance">请选择保险</string>

    <string name="insurance_age_range_compare">年龄范围</string>
    <string name="insurance_age_range_number" formatted="false">%d岁-%d岁</string>

    <string name="insurance_compensation_compare">每年赔偿上限</string>
    <string name="insurance_compensation_number" formatted="false">%d万</string>

    <string name="insurance_premium_compare">每年平均保费</string>

    <string name="add_text_string">吐槽</string>
    <string name="add_ask_string">提问</string>
    <string name="add_comment_string">评论</string>
</resources>
