<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:orientation="horizontal"
              android:padding="20dp"
              android:layout_height="wrap_content">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/text_btn"
            android:layout_margin="20dp"
            android:layout_marginTop="30dp"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:background="@drawable/add_text_icon"/>

        <TextView
            android:textSize="@dimen/TitleTextSize"
            android:textColor="@color/grey_color_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_text_string"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/ask_btn"
            android:layout_margin="20dp"
            android:layout_marginTop="30dp"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:background="@drawable/add_ask_icon"/>

        <TextView
            android:textSize="@dimen/TitleTextSize"
            android:textColor="@color/grey_color_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_ask_string"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/comment_btn"
            android:layout_margin="20dp"
            android:layout_marginTop="30dp"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:background="@drawable/add_comment_icon"/>

        <TextView
            android:textSize="@dimen/TitleTextSize"
            android:textColor="@color/grey_color_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_comment_string"/>
    </LinearLayout>
</LinearLayout>