<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <RelativeLayout
        android:id="@+id/launcher_header"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@color/main_blue_color">
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/menu_layout"
        android:layout_below="@id/launcher_header"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:background="@color/white"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="0dp"
            android:id="@+id/compare_layout"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <ImageView
                android:id="@+id/compare_icon_iv"
                android:layout_centerHorizontal="true"
                android:layout_width="48dp"
                android:background="@drawable/menu_item_bg_shape"
                android:layout_height="48dp"
                android:padding="5dp"
                android:src="@drawable/compare_icon"/>

            <TextView
                android:layout_marginTop="5dp"
                android:layout_below="@id/compare_icon_iv"
                android:id="@+id/compare_tv"
                android:layout_centerHorizontal="true"
                android:textColor="@color/grey_color_2"
                android:layout_width="wrap_content"
                android:text="@string/menu_compare_text"
                android:layout_height="wrap_content"/>

        </RelativeLayout>

        <RelativeLayout android:layout_width="0dp"
                        android:id="@+id/evaluate_layout"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">
            <ImageView
                android:id="@+id/evaluate_icon_iv"
                android:layout_centerHorizontal="true"
                android:layout_width="48dp"
                android:background="@drawable/menu_item_bg_shape"
                android:layout_height="48dp"
                android:padding="5dp"
                android:src="@drawable/evaluate_icon"/>

            <TextView
                android:layout_marginTop="5dp"
                android:layout_below="@id/evaluate_icon_iv"
                android:id="@+id/evaluate_tv"
                android:layout_centerHorizontal="true"
                android:textColor="@color/grey_color_2"
                android:layout_width="wrap_content"
                android:text="@string/menu_evaluate_text"
                android:layout_height="wrap_content"/>
        </RelativeLayout>

        <RelativeLayout android:layout_width="0dp"
                        android:id="@+id/consult_layout"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">
            <ImageView
                android:id="@+id/consult_icon_iv"
                android:layout_centerHorizontal="true"
                android:layout_width="48dp"
                android:background="@drawable/menu_item_bg_shape"
                android:layout_height="48dp"
                android:padding="10dp"
                android:src="@drawable/consult_icon"/>

            <TextView
                android:layout_marginTop="5dp"
                android:layout_below="@id/consult_icon_iv"
                android:id="@+id/consult_tv"
                android:layout_centerHorizontal="true"
                android:textColor="@color/grey_color_2"
                android:layout_width="wrap_content"
                android:text="@string/menu_consult_text"
                android:layout_height="wrap_content"/>
        </RelativeLayout>

        <RelativeLayout android:layout_width="0dp"
                        android:id="@+id/learn_layout"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">
            <ImageView
                android:id="@+id/learn_icon_iv"
                android:layout_centerHorizontal="true"
                android:layout_width="48dp"
                android:background="@drawable/menu_item_bg_shape"
                android:layout_height="48dp"
                android:padding="5dp"
                android:src="@drawable/learn_icon"/>

            <TextView
                android:layout_marginTop="5dp"
                android:layout_below="@id/learn_icon_iv"
                android:id="@+id/learn_tv"
                android:layout_centerHorizontal="true"
                android:textColor="@color/grey_color_2"
                android:layout_width="wrap_content"
                android:text="@string/menu_learn_text"
                android:layout_height="wrap_content"/>
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout android:orientation="vertical"
                  android:layout_width="match_parent"
                  android:background="@color/white"
                  android:layout_height="wrap_content">

        <View
            android:background="@color/grey_color_1"
            android:id="@+id/divider_1_view"
            android:layout_width="match_parent"
            android:layout_height="10dp"/>

        <TextView
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/TitleTextSize"
            android:textColor="@color/main_blue_color"
            android:text="@string/recommend_insurance_title"
            android:layout_marginLeft="10dp"/>
    </LinearLayout>
</LinearLayout>
