<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:orientation="vertical"
                android:background="@color/white"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <include layout="@layout/bb_action_bar"
             android:id="@+id/action_bar"/>

    <RelativeLayout
        android:id="@+id/launcher_header"
        android:layout_below="@id/action_bar"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@color/main_blue_color">

        <RelativeLayout
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:padding="5dp"
            android:layout_width="match_parent"
            android:layout_centerInParent="true"
            android:background="@drawable/search_bg_shape"
            android:focusableInTouchMode="true"
            android:layout_height="32dp">

            <ImageView
                android:id="@+id/search_icon_iv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/search_icon"/>

            <EditText
                android:layout_toRightOf="@id/search_icon_iv"
                android:layout_marginLeft="5dp"
                android:id="@+id/search_et"
                android:maxLines="1"
                android:inputType="text"
                android:imeOptions="actionSearch"
                android:hint="@string/search_hint"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:textSize="@dimen/HintTextSize"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"/>
        </RelativeLayout>

    </RelativeLayout>

    <LinearLayout
        android:layout_below="@id/launcher_header"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:paddingTop="15dp"
        android:layout_height="wrap_content">

        <RelativeLayout android:layout_width="0dp"
                        android:id="@+id/compare_layout"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">
            <ImageView
                android:id="@+id/compare_icon_iv"
                android:layout_centerHorizontal="true"
                android:layout_width="48dp"
                android:background="@drawable/menu_item_bg_shape"
                android:layout_height="48dp"
                android:padding="5dp"
                android:src="@drawable/compare_icon"/>

            <TextView
                android:layout_marginTop="5dp"
                android:layout_below="@id/compare_icon_iv"
                android:id="@+id/compare_tv"
                android:layout_centerHorizontal="true"
                android:textColor="@color/grey_color_2"
                android:layout_width="wrap_content"
                android:text="@string/menu_compare_text"
                android:layout_height="wrap_content"/>

        </RelativeLayout>

        <RelativeLayout android:layout_width="0dp"
                        android:id="@+id/evaluate_layout"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">
            <ImageView
                android:id="@+id/evaluate_icon_iv"
                android:layout_centerHorizontal="true"
                android:layout_width="48dp"
                android:background="@drawable/menu_item_bg_shape"
                android:layout_height="48dp"
                android:padding="5dp"
                android:src="@drawable/evaluate_icon"/>

            <TextView
                android:layout_marginTop="5dp"
                android:layout_below="@id/evaluate_icon_iv"
                android:id="@+id/evaluate_tv"
                android:layout_centerHorizontal="true"
                android:textColor="@color/grey_color_2"
                android:layout_width="wrap_content"
                android:text="@string/menu_evaluate_text"
                android:layout_height="wrap_content"/>
        </RelativeLayout>

        <RelativeLayout android:layout_width="0dp"
                        android:id="@+id/consult_layout"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">
            <ImageView
                android:id="@+id/consult_icon_iv"
                android:layout_centerHorizontal="true"
                android:layout_width="48dp"
                android:background="@drawable/menu_item_bg_shape"
                android:layout_height="48dp"
                android:padding="10dp"
                android:src="@drawable/consult_icon"/>

            <TextView
                android:layout_marginTop="5dp"
                android:layout_below="@id/consult_icon_iv"
                android:id="@+id/consult_tv"
                android:layout_centerHorizontal="true"
                android:textColor="@color/grey_color_2"
                android:layout_width="wrap_content"
                android:text="@string/menu_consult_text"
                android:layout_height="wrap_content"/>
        </RelativeLayout>

        <RelativeLayout android:layout_width="0dp"
                        android:id="@+id/learn_layout"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">
            <ImageView
                android:id="@+id/learn_icon_iv"
                android:layout_centerHorizontal="true"
                android:layout_width="48dp"
                android:background="@drawable/menu_item_bg_shape"
                android:layout_height="48dp"
                android:padding="5dp"
                android:src="@drawable/learn_icon"/>

            <TextView
                android:layout_marginTop="5dp"
                android:layout_below="@id/learn_icon_iv"
                android:id="@+id/learn_tv"
                android:layout_centerHorizontal="true"
                android:textColor="@color/grey_color_2"
                android:layout_width="wrap_content"
                android:text="@string/menu_learn_text"
                android:layout_height="wrap_content"/>
        </RelativeLayout>
    </LinearLayout>

</RelativeLayout>